--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
+annotated-types==0.5.0
 asgiref==3.7.2
 backports.zoneinfo==0.2.1
+beautifulsoup4==4.12.2
 Django==4.2.4
+django-bootstrap-datepicker-plus==5.0.4
+django-bootstrap3==23.4
+django-filter==23.2
+django-tables2==2.6.0
 psycopg2-binary==2.9.6
+pydantic==2.1.1
+pydantic_core==2.4.0
 python-dotenv==1.0.0
+soupsieve==2.4.1
 sqlparse==0.4.4
 typing_extensions==4.7.1
